tg-8139. [FE] Convertir a card la tabla de sección "Motivos"

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.scss
@@ -12,14 +12,14 @@ mat-form-field {
 	width: 100%;
 }
 
-.margin-bottom {
-	margin-bottom: 3vh;
-}
-
 .icon {
 	padding: 20px 0px 20px 10px;
 }
 
 .add-button {
 	font-size: 16px;
+}
+
+.separation {
+	margin: 10px 0;
 }
