--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
@@ -26,15 +26,28 @@
 		<app-new-consultation-expansion-section id="motivo"
 			[title]="'ambulatoria.paciente.nueva-consulta.motivo.TITLE' | translate" icon="sms_failed"
 			[isEmpty]="motivoNuevaConsultaService.isEmpty()" [recommend]="true">
-			<div>
-				<app-document-section-table [columns]="motivoNuevaConsultaService.getTableColumnConfig()"
-					[data]="motivoNuevaConsultaService.getMotivosConsulta()">
-				</app-document-section-table>
+			<div fxLayout="column" fxLayoutGap="2vh">
+				<app-document-section-card-list *ngIf="!motivoNuevaConsultaService.isEmpty()"
+					title="ambulatoria.paciente.nueva-consulta.motivo.LIST_CARD_TITLE">
+					<div
+						*ngFor="let motivo of motivoNuevaConsultaService.getMotivosConsulta(); index as i; last as isLast">
+						<div fxLayout="row" fxLayoutAlign="space-between center">
+							<span>{{ motivo.snomed.pt }}</span>
+							<button type="button" mat-icon-button color="warn"
+								(click)="motivoNuevaConsultaService.remove(i)">
+								<mat-icon>delete_outline</mat-icon>
+							</button>
+						</div>
+						<mat-divider class="separation" inset *ngIf="!isLast"></mat-divider>
+					</div>
+				</app-document-section-card-list>
 
-				<button mat-button type="button" id="add-reason-button" color="primary" class="add-button"
-					(click)="addReason()">
-					+ {{ 'ambulatoria.paciente.nueva-consulta.motivo.ADD' | translate }}
-				</button>
+				<div>
+					<button mat-button type="button" id="add-reason-button" color="primary" class="add-button"
+						(click)="addReason()">
+						+ {{ 'ambulatoria.paciente.nueva-consulta.motivo.ADD' | translate }}
+					</button>
+				</div>
 			</div>
 		</app-new-consultation-expansion-section>
 
