tg-8026. [FE] Convertir a card la tabla de sección "Problemas"

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.scss
@@ -20,6 +20,10 @@ mat-form-field {
 	font-size: 16px;
 }
 
-.separation {
+mat-divider.mat-divider-horizontal.mat-divider-inset.separation {
 	margin: 10px 0;
+}
+
+.gray-caption {
+	color: #979797;
 }
