--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
@@ -54,15 +54,60 @@
 		<app-new-consultation-expansion-section id="problemas"
 			[title]="'ambulatoria.paciente.nueva-consulta.problemas.TITLE' | translate" icon="error_outlined"
 			[isEmpty]="ambulatoryConsultationProblemsService.isEmpty()" [collapsed]="false" [recommend]="true">
-			<div>
-				<app-document-section-table [columns]="ambulatoryConsultationProblemsService.getColumns()"
-					[data]="ambulatoryConsultationProblemsService.getProblemas()">
-				</app-document-section-table>
+			<div fxLayout="column" fxLayoutGap="2vh">
 
-				<button mat-button type="button" id="add-problem-button" color="primary" class="add-button"
-					(click)="addProblem()">
-					+ {{ 'ambulatoria.paciente.nueva-consulta.problemas.buttons.ADD' | translate }}
-				</button>
+				<app-document-section-card-list *ngIf="!ambulatoryConsultationProblemsService.isEmpty()"
+					title="ambulatoria.paciente.nueva-consulta.problemas.PROBLEMA">
+					<div
+						*ngFor="let problema of ambulatoryConsultationProblemsService.getProblemas(); index as i; last as isLast">
+						<div fxLayout="row" fxLayoutAlign="start center">
+							<div fxFlex="80" fxLayout="column" fxLayoutGap="2px">
+								<span>{{ problema.snomed.pt }}</span>
+								<div fxLayout="row" fxLayoutGap="3px">
+									<span *ngIf="problema?.cronico" class="color-primary">
+										{{ 'ambulatoria.paciente.nueva-consulta.problemas.CRONICO' | translate |
+										uppercase }}
+									</span>
+									<span *ngIf="problema?.cronico && problema.codigoSeveridad">-</span>
+									<em *ngIf="problema?.codigoSeveridad">
+										{{
+										ambulatoryConsultationProblemsService.getSeverityDisplayName(problema.codigoSeveridad)
+										}}
+									</em>
+								</div>
+								<div fxLayout="row" fxLayoutGap="5px">
+									<span *ngIf="problema.fechaInicio" class="mat-caption gray-caption">
+										{{ 'ambulatoria.paciente.nueva-consulta.problemas.FECHA_INICIO_PREFIJO' |
+										translate }}
+										{{ momentFormat(problema.fechaInicio, DateFormat.VIEW_DATE) }}
+									</span>
+									<span *ngIf="problema.fechaFin" class="mat-caption gray-caption">
+										{{ 'ambulatoria.paciente.nueva-consulta.problemas.FECHA_FIN_PREFIJO' |
+										translate }}
+										{{ momentFormat(problema.fechaFin, DateFormat.VIEW_DATE) }}
+									</span>
+								</div>
+							</div>
+							<button fxFlex="10" type="button" mat-icon-button color="primary"
+								(click)="ambulatoryConsultationProblemsService.openEditDialog(i)">
+								<mat-icon>edit</mat-icon>
+							</button>
+							<button fxFlex="10" type="button" mat-icon-button color="warn"
+								(click)="ambulatoryConsultationProblemsService.remove(i)">
+								<mat-icon>delete_outline</mat-icon>
+							</button>
+						</div>
+
+						<mat-divider class="separation" inset *ngIf="!isLast"></mat-divider>
+					</div>
+				</app-document-section-card-list>
+
+				<div>
+					<button mat-button type="button" id="add-problem-button" color="primary" class="add-button"
+						(click)="addProblem()">
+						+ {{ 'ambulatoria.paciente.nueva-consulta.problemas.buttons.ADD' | translate }}
+					</button>
+				</div>
 			</div>
 		</app-new-consultation-expansion-section>
 
