--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
@@ -126,16 +126,36 @@
 		<app-new-consultation-expansion-section id="antecedentes-familiares"
 			[title]="'ambulatoria.paciente.nueva-consulta.antecedentes-familiares.TITLE' | translate" icon="report"
 			[isEmpty]="antecedentesFamiliaresNuevaConsultaService.isEmpty()">
-			<div>
-				<app-document-section-table
-					[columns]="antecedentesFamiliaresNuevaConsultaService.getTableColumnConfig()"
-					[data]="antecedentesFamiliaresNuevaConsultaService.getAntecedentesFamiliares()">
-				</app-document-section-table>
+			<div fxLayout="column" fxLayoutGap="2vh">
 
-				<button mat-button type="button" id="add-family-history-button" color="primary" class="add-button"
-					(click)="addFamilyHistory()">
-					+ {{ 'ambulatoria.paciente.nueva-consulta.antecedentes-familiares.buttons.ADD' | translate }}
-				</button>
+				<app-document-section-card-list *ngIf="!antecedentesFamiliaresNuevaConsultaService.isEmpty()"
+					title="ambulatoria.paciente.nueva-consulta.antecedentes-familiares.LIST_CARD_TITLE">
+					<div
+						*ngFor="let antecedente of antecedentesFamiliaresNuevaConsultaService.getAntecedentesFamiliares(); index as i; last as isLast">
+						<div fxLayout="row" fxLayoutAlign="space-between center">
+							<div fxLayout="column">
+								<span>{{ antecedente.snomed.pt }}</span>
+								<span *ngIf="antecedente?.fecha" class="mat-caption gray-caption">
+									{{ 'ambulatoria.paciente.nueva-consulta.antecedentes-familiares.DATE_PREFIX' |
+									translate }}
+									{{ momentFormat(antecedente.fecha, DateFormat.VIEW_DATE) }}
+								</span>
+							</div>
+							<button type="button" mat-icon-button color="warn"
+								(click)="antecedentesFamiliaresNuevaConsultaService.remove(i)">
+								<mat-icon>delete_outline</mat-icon>
+							</button>
+						</div>
+						<mat-divider class="separation" inset *ngIf="!isLast"></mat-divider>
+					</div>
+				</app-document-section-card-list>
+
+				<div>
+					<button mat-button type="button" id="add-family-history-button" color="primary" class="add-button"
+						(click)="addFamilyHistory()">
+						+ {{ 'ambulatoria.paciente.nueva-consulta.antecedentes-familiares.buttons.ADD' | translate }}
+					</button>
+				</div>
 			</div>
 		</app-new-consultation-expansion-section>
 
