tg-8028. [FE] Convertir a card la tabla de sección "Medicación habitual"

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/counterreference-dock-popup/counterreference-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/counterreference-dock-popup/counterreference-dock-popup.component.html
@@ -115,7 +115,7 @@
 
 						<div class="margin-checkbox">
 							<mat-checkbox formControlName="suspendido">
-								<span [translate]="'ambulatoria.paciente.nueva-consulta.medicaciones.SUSPENDIDO'">  </span>
+								<span [translate]="'ambulatoria.paciente.nueva-consulta.medicaciones.SUSPENDIDA'">  </span>
 							</mat-checkbox>
 						</div>
 
