--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
@@ -200,15 +200,34 @@
 		<app-new-consultation-expansion-section id="procedimientos"
 			[title]="'ambulatoria.paciente.nueva-consulta.procedimientos.TITLE' | translate" icon="library_add"
 			[isEmpty]="procedimientoNuevaConsultaService.isEmpty()">
-			<div>
-				<app-document-section-table [columns]="procedimientoNuevaConsultaService.getTableColumnConfig()"
-					[data]="procedimientoNuevaConsultaService.getProcedimientos()">
-				</app-document-section-table>
+			<div fxLayout="column" fxLayoutGap="2vh">
 
-				<button mat-button type="button" id="add-procedure-button" color="primary" class="add-button"
-					(click)="addProcedure()">
-					+ {{ 'ambulatoria.paciente.nueva-consulta.procedimientos.buttons.ADD' | translate }}
-				</button>
+				<app-document-section-card-list *ngIf="!procedimientoNuevaConsultaService.isEmpty()"
+					title="ambulatoria.paciente.nueva-consulta.procedimientos.TABLE_TITLE">
+					<div
+						*ngFor="let procedimiento of procedimientoNuevaConsultaService.getProcedimientos(); index as i; last as isLast">
+						<div fxLayout="row" fxLayoutAlign="space-between center">
+							<div fxLayout="column">
+								<span>{{ procedimiento.snomed.pt }}</span>
+								<span *ngIf="procedimiento?.performedDate" class="mat-caption gray-caption">
+									{{ procedimiento.performedDate | date: 'shortDate' }}
+								</span>
+							</div>
+							<button type="button" mat-icon-button color="warn"
+								(click)="procedimientoNuevaConsultaService.remove(i)">
+								<mat-icon>delete_outline</mat-icon>
+							</button>
+						</div>
+						<mat-divider class="separation" inset *ngIf="!isLast"></mat-divider>
+					</div>
+				</app-document-section-card-list>
+
+				<div>
+					<button mat-button type="button" id="add-procedure-button" color="primary" class="add-button"
+						(click)="addProcedure()">
+						+ {{ 'ambulatoria.paciente.nueva-consulta.procedimientos.buttons.ADD' | translate }}
+					</button>
+				</div>
 			</div>
 		</app-new-consultation-expansion-section>
 
