tg-8092 [FE] La agenda del profesional se debe abrir en la fecha que estaba seleccionada cuando se minimizo la misma.

--- a/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/calendar-professional-view-dock-popup/calendar-professional-view-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/calendar-professional-view-dock-popup/calendar-professional-view-dock-popup.component.html
@@ -24,7 +24,7 @@
             </mat-form-field>
         </div>
         <app-agenda *ngIf="agendaSelected" class="agenda" [canCreateAppoinment]="false" [idAgenda]="agendaSelected.id"
-            [showAll]="false" [view]="calendarViewEnum.Day">
+            [showAll]="false" [view]="calendarViewEnum.Day" [viewDate]="calendarDate">
         </app-agenda>
     </div>
 </app-dock-popup>
