--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.scss
@@ -27,3 +27,7 @@ mat-divider.mat-divider-horizontal.mat-divider-inset.separation {
 .gray-caption {
 	color: #979797;
 }
+
+.bold {
+	font-weight: 500;
+}
