tg-8161. [FE] Mostrar indicador de problema "crónico" en el card con misma estética a como estaba en la tabla

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
@@ -64,9 +64,8 @@
 							<div fxFlex="80" fxLayout="column" fxLayoutGap="2px">
 								<span>{{ problema.snomed.pt }}</span>
 								<div fxLayout="row" fxLayoutGap="3px">
-									<span *ngIf="problema?.cronico" class="color-primary">
-										{{ 'ambulatoria.paciente.nueva-consulta.problemas.CRONICO' | translate |
-										uppercase }}
+									<span *ngIf="problema?.cronico" class="gray-caption">
+										({{ 'ambulatoria.paciente.nueva-consulta.problemas.CRONICO' | translate }})
 									</span>
 									<span *ngIf="problema?.cronico && problema.codigoSeveridad">-</span>
 									<em *ngIf="problema?.codigoSeveridad">
