tg-8164. [FE] Asignar diferentes colores al indicador de severidad de los problemas agregados al card

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
@@ -68,7 +68,8 @@
 										({{ 'ambulatoria.paciente.nueva-consulta.problemas.CRONICO' | translate }})
 									</span>
 									<span *ngIf="problema?.cronico && problema.codigoSeveridad">-</span>
-									<em *ngIf="problema?.codigoSeveridad">
+									<em *ngIf="problema?.codigoSeveridad"
+										[ngClass]="{ 'gray-caption': SEVERITY_CODES.LOW === problema.codigoSeveridad, 'color-warn': SEVERITY_CODES.HIGH === problema.codigoSeveridad }">
 										{{
 										ambulatoryConsultationProblemsService.getSeverityDisplayName(problema.codigoSeveridad)
 										}}
