--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
@@ -28,7 +28,7 @@
 			[isEmpty]="motivoNuevaConsultaService.isEmpty()" [recommend]="true">
 			<div fxLayout="column" fxLayoutGap="2vh">
 				<app-document-section-card-list *ngIf="!motivoNuevaConsultaService.isEmpty()"
-					title="ambulatoria.paciente.nueva-consulta.motivo.LIST_CARD_TITLE">
+					title="{{ 'ambulatoria.paciente.nueva-consulta.motivo.LIST_CARD_TITLE' }}">
 					<div
 						*ngFor="let motivo of motivoNuevaConsultaService.getMotivosConsulta(); index as i; last as isLast">
 						<div fxLayout="row" fxLayoutAlign="space-between center">
@@ -57,7 +57,7 @@
 			<div fxLayout="column" fxLayoutGap="2vh">
 
 				<app-document-section-card-list *ngIf="!ambulatoryConsultationProblemsService.isEmpty()"
-					title="ambulatoria.paciente.nueva-consulta.problemas.PROBLEMA">
+					title="{{ 'ambulatoria.paciente.nueva-consulta.problemas.PROBLEMA' }}">
 					<div
 						*ngFor="let problema of ambulatoryConsultationProblemsService.getProblemas(); index as i; last as isLast">
 						<div fxLayout="row" fxLayoutAlign="space-between center">
@@ -141,7 +141,7 @@
 			<div fxLayout="column" fxLayoutGap="2vh">
 
 				<app-document-section-card-list *ngIf="!antecedentesFamiliaresNuevaConsultaService.isEmpty()"
-					title="ambulatoria.paciente.nueva-consulta.antecedentes-familiares.LIST_CARD_TITLE">
+					title="{{ 'ambulatoria.paciente.nueva-consulta.antecedentes-familiares.LIST_CARD_TITLE' }}">
 					<div
 						*ngFor="let antecedente of antecedentesFamiliaresNuevaConsultaService.getAntecedentesFamiliares(); index as i; last as isLast">
 						<div fxLayout="row" fxLayoutAlign="space-between center">
@@ -177,7 +177,7 @@
 			<div fxLayout="column" fxLayoutGap="2vh">
 
 				<app-document-section-card-list *ngIf="!medicacionesNuevaConsultaService.isEmpty()"
-					title="ambulatoria.paciente.nueva-consulta.medicaciones.LIST_CARD_TITLE">
+					title="{{ 'ambulatoria.paciente.nueva-consulta.medicaciones.LIST_CARD_TITLE' }}">
 					<div fxLayout="column" fxLayoutGap="10px"
 						*ngFor="let medicacion of medicacionesNuevaConsultaService.getMedicaciones(); index as i; last as isLast">
 						<div fxLayout="row" fxLayoutAlign="space-between center">
@@ -215,7 +215,7 @@
 			<div fxLayout="column" fxLayoutGap="2vh">
 
 				<app-document-section-card-list *ngIf="!procedimientoNuevaConsultaService.isEmpty()"
-					title="ambulatoria.paciente.nueva-consulta.procedimientos.TABLE_TITLE">
+					title="{{ 'ambulatoria.paciente.nueva-consulta.procedimientos.TABLE_TITLE' }}">
 					<div
 						*ngFor="let procedimiento of procedimientoNuevaConsultaService.getProcedimientos(); index as i; last as isLast">
 						<div fxLayout="row" fxLayoutAlign="space-between center">
@@ -262,7 +262,7 @@
 			<div fxLayout="column" fxLayoutGap="2vh">
 
 				<app-document-section-card-list *ngIf="!alergiasNuevaConsultaService.isEmpty()"
-					title="ambulatoria.paciente.nueva-consulta.alergias.table.TITLE">
+					title="{{ 'ambulatoria.paciente.nueva-consulta.alergias.table.TITLE' }}">
 					<div *ngFor="let alergia of alergiasNuevaConsultaService.getAlergias(); index as i; last as isLast">
 						<div fxLayout="row" fxLayoutAlign="space-between center">
 							<div fxLayout="column">
@@ -296,7 +296,7 @@
 			<div fxLayout="column" fxLayoutGap="2vh">
 
 				<app-document-section-card-list *ngIf="!ambulatoryConsultationReferenceService.isEmpty()"
-					title="ambulatoria.paciente.nueva-consulta.solicitud-referencia.REGISTERED_REQUEST">
+					title="{{ 'ambulatoria.paciente.nueva-consulta.solicitud-referencia.REGISTERED_REQUEST' }}">
 					<div
 						*ngFor="let request of ambulatoryConsultationReferenceService.getData(); last as isLast; trackBy: trackByRequest">
 						<div fxLayout="column" fxLayoutGap="15px">
