tg-8261 [FE] Ajustar backend y front para reducir información de la agenda. Agregar intervalos de tiempo a la busqueda

--- a/front-end/apps/projects/hospital/src/app/modules/turnos/routes/agenda/agenda.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/turnos/routes/agenda/agenda.component.html
@@ -13,9 +13,9 @@
 			</div>
 			<div>
 				<mat-button-toggle-group class="toggle-view" [(value)]="view">
-					<mat-button-toggle value="{{calendarViewEnum.Month}}">Mes</mat-button-toggle>
-					<mat-button-toggle value="{{calendarViewEnum.Week}}">Semana</mat-button-toggle>
-					<mat-button-toggle value="{{calendarViewEnum.Day}}">Día</mat-button-toggle>
+					<mat-button-toggle value="{{calendarViewEnum.Month}}" (click)="changeViewDate(viewDate)">Mes</mat-button-toggle>
+					<mat-button-toggle value="{{calendarViewEnum.Week}}" (click)="changeViewDate(viewDate)">Semana</mat-button-toggle>
+					<mat-button-toggle value="{{calendarViewEnum.Day}}" (click)="changeViewDate(viewDate)">Día</mat-button-toggle>
 				</mat-button-toggle-group>
 			</div>
 		</div>
@@ -144,7 +144,7 @@
 				</div>
 			</div>
 		</ng-template>
-		
+
 		<ng-template #navigation>
 			<mat-button-toggle-group>
 				<mat-button-toggle id="previous" class="navigation"
