tg-8276 Facilita la forma de agregar extensiones. Deshabilita test marbles

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
@@ -303,7 +303,7 @@
 								(consultationCompleted)="updateFields($event)"></app-odontogram>
 						</ng-template>
 					</mat-tab>
-					<mat-tab *ngFor="let extensionWCTab of extensionWCTabs" [id]="extensionWCTab.title">
+					<mat-tab *ngFor="let extensionWCTab of extensionWCTabs$ | async" [id]="extensionWCTab.title">
 						<ng-template mat-tab-label>
 							<span>{{extensionWCTab.title | uppercase}}</span>
 						</ng-template>
