--- a/front-end/apps/projects/hospital/src/app/modules/extensions/components/routed-external/routed-external.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/extensions/components/routed-external/routed-external.component.html
@@ -1,3 +1,3 @@
 <app-content>
-	<app-ui-external-component [params]="extension"></app-ui-external-component>
+	<app-ui-external-component *ngIf="extension" [params]="extension"></app-ui-external-component>
 </app-content>
