tg-8278 [FE-FIX] Se llama al endpoint de turnos fuera de turnos

--- a/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/calendar-professional-view-dock-popup/calendar-professional-view-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/calendar-professional-view-dock-popup/calendar-professional-view-dock-popup.component.html
@@ -23,7 +23,7 @@
                 </button>
             </mat-form-field>
         </div>
-        <app-agenda *ngIf="agendaSelected" class="agenda" [canCreateAppoinment]="false" [idAgenda]="agendaSelected.id"
+        <app-agenda *ngIf="agendaSelected" class="agenda" [canCreateAppoinment]="false" [id]="agendaSelected.id"
             [showAll]="false" [view]="calendarViewEnum.Day" [professionalId]="this.professionalId">
         </app-agenda>
     </div>
