tg-8085 Actualizar formato mail

--- a/back-end/hospital-api/src/test/resources/templates/notifications/mail-body/new-appointment-emptyArgs.html
+++ b/back-end/hospital-api/src/test/resources/templates/notifications/mail-body/new-appointment-emptyArgs.html
@@ -11,19 +11,40 @@
 </head>
 <body>
 <p>Hola <strong>Neil</strong>:</p>
+<strong>
+    Datos del paciente
+</strong>
 <p>
-    Le confirmamos el turno con
-    <span></span>
+    Nro documento:
 
-    el
-    <span></span>
-    a las
-    <span></span>
-    .
+    <span>Sin información</span></p>
+<p>
+    Apellido y nombre:
+    <span>deGrasse Tyson </span>
+    <span>Neil</span>
+
 </p>
+<p>
+    Cobertura médica:
 
+    <span>Sin información</span>
+</p>
+<p>
+    Fecha turno:
+</p>
+<p>
+    Hora turno:
+</p>
+<p>
+    Consultorio :
 
+    <span>Sin información</span>
+</p>
+<p>
+    Profesional :
+    <span>Sin información</span>
 
+</p>
 
 </body>
 <footer class="container">
