--- a/back-end/hospital-api/src/test/resources/templates/notifications/mail-body/new-appointment-requiredArgs.html
+++ b/back-end/hospital-api/src/test/resources/templates/notifications/mail-body/new-appointment-requiredArgs.html
@@ -11,21 +11,41 @@
 </head>
 <body>
 <p>Hola <strong>Neil</strong>:</p>
+<strong>
+    Datos del paciente
+</strong>
 <p>
-    Le confirmamos el turno con
-    <span>Carl Sagan</span>
+    Nro documento:
 
-    el
-    <span>lunes 18 de abril</span>
-    a las
-    <span>10:15</span>
-    .
+    <span>Sin información</span></p>
+<p>
+    Apellido y nombre:
+    <span>deGrasse Tyson </span>
+    <span>Neil</span>
 </p>
+<p>
+    Cobertura médica:
 
+    <span>Sin información</span>
+</p>
+<p>
+    Fecha turno:
+    <span>lunes 18 de abril</span>
+</p>
+<p>
+    Hora turno:
+    <span>10:15</span>
+</p>
+<p>
+    Consultorio :
 
-<p>Saludos cordiales, <span>HSI</span></p>
-
-
+    <span>Consultorio 1</span>
+</p>
+<p>
+    Profesional :
+    <span>Carl Sagan</span>
+</p>
+<p> Saludos cordiales, <span>HSI</span></p>
 
 </body>
 <footer class="container">
