tg-8323 [P2] Se deja de visualizar el título "Resumen de estudios y procedimientos realizados" en epicrisis

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/dialogs/epicrisis-dock-popup/epicrisis-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/dialogs/epicrisis-dock-popup/epicrisis-dock-popup.component.html
@@ -250,8 +250,7 @@
 							</mat-form-field>
 						</div>
 						<div>
-							<mat-label *ngIf="hasError(form, 'required', 'indicationsNote')"
-									   [translate]="'internaciones.epicrisis.observations.STUDIES_SUMMARY'"></mat-label>
+							<mat-label [translate]="'internaciones.epicrisis.observations.STUDIES_SUMMARY'"></mat-label>
 							<mat-form-field [floatLabel]="'never'" appearance="outline">
 								<textarea matInput type="text" id="studiesSummaryNote" name="studiesSummaryNote"
 										  formControlName="studiesSummaryNote"
